infra/k8s/old_posts.yaml
apiVersion: v1
kind: Pod
metadata:
  name: posts
spec:
  containers:
    - name: posts
      image: danielmoln/posts:0.0.1
