infra/k8s/comments-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: comments-deployment
spec:
   replicas: 1
   selector:
      matchLabels:
         app: comments
   template:
      metadata:
         labels:
            app: comments
      spec:
         containers:
            - name: comments
              image: danielmoln/comments
---
apiVersion: v1
kind: Service
metadata:
   name: comments-srv
spec:
   selector:
      app: comments
   ports:
      - name: comments
        protocol: TCP
        port: 4001
        targetPort: 4001
---
apiVersion: v1
kind: Service
metadata:
   name: post-node-service
spec:
   type: NodePort
   ports:
      - port: 4001
        targetPort: 4001
        nodePort: 32003
   selector:
      app: comments
