infra/k8s/moderation-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: moderation-deployment
spec:
   replicas: 1
   selector:
      matchLabels:
         app: moderation
   template:
      metadata:
         labels:
            app: moderation
      spec:
         containers:
            - name: moderation
              image: danielmoln/moderation
---
apiVersion: v1
kind: Service
metadata:
   name: moderation-srv
spec:
   selector:
      app: moderation
   ports:
      - name: moderation
        protocol: TCP
        port: 4003
        targetPort: 4003
---
apiVersion: v1
kind: Service
metadata:
   name: moderation-node-service
spec:
    type: NodePort
    ports:
        - port: 4003
          targetPort: 4003
          nodePort: 32001
    selector:
        app: moderation
