infra/k8s/posts-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-deployment
spec:
  replicas: 1 # number of pods
  selector: # select the pods to apply the deployment to
    matchLabels:
      app: posts # label of the pod
  template: # define the pods that will be created by this deployment
    metadata: # metadata of the pod
      labels: # labels of the pod (used by the selector)
        app: posts # label of the pod (used by the selector)
    spec: # specification of the pod
        containers: # containers of the pod
            - name: posts # name of the container
              image: danielmoln/posts # image of the container
---
apiVersion: v1
kind: Service
metadata:
   name: post-srv
spec:
   selector:
      app: posts
   ports:
      - name: posts
        protocol: TCP
        port: 4000
        targetPort: 4000
---
apiVersion: v1
kind: Service
metadata:
   name: post-node-service
spec:
   type: NodePort
   ports:
      - port: 80
        targetPort: 4000
        nodePort: 32767
   selector:
      app: posts
