infra/k8s/query-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-deployment
spec:
   replicas: 1
   selector:
      matchLabels:
         app: query
   template:
      metadata:
         labels:
            app: query
      spec:
         containers:
            - name: query
              image: danielmoln/query
---
apiVersion: v1
kind: Service
metadata:
   name: query-srv
spec:
    selector:
        app: query
    ports:
        - name: query
          protocol: TCP
          port: 4002
          targetPort: 4002
---
apiVersion: v1
kind: Service
metadata:
   name: query-node-service
spec:
    type: NodePort
    ports:
        - port: 4002
          targetPort: 4002
          nodePort: 32000
    selector:
        app: query
